// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Page should not show the pop-out timestamp when allowDateStamp is false 1`] = `
<DocumentFragment>
  .c25 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c22 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c4 {
  position: relative;
  z-index: 0;
  margin-top: 2rem;
}

.c7 {
  margin: 0;
  padding: 0;
}

.c16 {
  padding: 0.5rem 0 1rem;
}

.c16:first-child {
  padding-top: 0;
}

.c16:last-child {
  padding-bottom: 0;
  border: none;
}

.c15 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c23 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c18 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

.c18 >div {
  vertical-align: middle;
}

.c18 >div {
  display: inline-block;
  vertical-align: initial;
}

.c18 svg {
  margin: 0;
}

.c27 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c17 {
  position: relative;
}

.c24 {
  position: relative;
}

.c26 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.c19 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

.c28 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c21 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.c29 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c20 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c20:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c20:hover,
.c20:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:visited {
  color: #6E6E73;
}

.c3 {
  margin-bottom: 1rem;
}

.c5 {
  margin-top: 0;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c30 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c14 {
  margin-bottom: 1.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c22 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 0.5rem) + 7 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 0.5rem) + 7 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 0.5rem) + 7 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 1rem) + 7 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(8/12*(100% - 12 * 1rem) + 7 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(5/12*(100% - 12 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 16.666666666666668%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c12 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c12 {
    width: calc(25%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c12 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c6 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c4 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width:62.9375rem) {
  .c16 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c16 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c16:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c23 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c23 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c18 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c18 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c27 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c27 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c17 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:25rem) {
  .c26 {
    position: absolute;
    bottom: 0;
  }
}

@media (max-width:24.9375rem) {
  .c26 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c21 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c21 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c21 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c21 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c29 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c29 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c29 {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:63rem) {
  .c3 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c11 {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c11 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c13 {
    margin-top: 2rem;
  }
}

@media (min-width:63rem) {
  .c14 {
    padding: 1rem;
  }
}

<div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="LoadingContainer"
      >
        <div
          id="ErrorContainer"
        >
          <div
            id="DataContainer"
          >
            <noscript />
            <div
              class="c0 c1"
              dir="ltr"
            >
              <div
                class="c2"
                dir="ltr"
              >
                <main
                  role="main"
                />
                <section
                  aria-labelledby="related-content-heading"
                  class="c3"
                  role="region"
                >
                  <div
                    class="c3"
                  >
                    <div
                      class="c4 c5"
                    >
                      <div
                        class="c6"
                      />
                      <h2
                        class="c7"
                      >
                        <div
                          class="c8"
                        >
                          <span
                            class="c9"
                          >
                            <span
                              class="c10"
                              dir="ltr"
                              id="related-content-heading"
                            >
                              Another thing we de for inside dis tori
                            </span>
                          </span>
                        </div>
                      </h2>
                    </div>
                    <div
                      class="c11"
                    />
                  </div>
                </section>
              </div>
              <div
                class="c12 c13"
                dir="ltr"
              >
                <div
                  class="c14"
                >
                  <section
                    aria-labelledby="top-stories-heading"
                    class="c3"
                    role="region"
                  >
                    <div
                      class="c3"
                    >
                      <div
                        class="c4 c5"
                      >
                        <div
                          class="c6"
                        />
                        <h2
                          class="c7"
                        >
                          <div
                            class="c8"
                          >
                            <span
                              class="c9"
                            >
                              <span
                                class="c10"
                                dir="ltr"
                                id="top-stories-heading"
                              >
                                Top Stories
                              </span>
                            </span>
                          </div>
                        </h2>
                      </div>
                      <ul
                        class="c15"
                        role="list"
                      >
                        <li
                          class="c16"
                          role="listitem"
                        >
                          <div
                            class="c17"
                          >
                            <div
                              class="c18"
                              dir="ltr"
                            >
                              <h3
                                class="c19"
                              >
                                <a
                                  class="c20"
                                  href="/mundo/noticias-internacional-51939501"
                                >
                                  China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
                                </a>
                              </h3>
                              <p
                                class="c21"
                              >
                                Un día después de que en Estados Unidos anunciaran que pasan a probar en humanos una posible vacuna para el nuevo coronavirus, diversas instituciones chinas revelaron este martes sus planes para iniciar a partir de abril ensayos clínicos de varias posibles vacunas contra el covid-19.
                              </p>
                              <time
                                class="c22"
                                datetime="2020-02-03"
                              >
                                3rd February 2020
                              </time>
                            </div>
                          </div>
                        </li>
                        <li
                          class="c16"
                          role="listitem"
                        >
                          <div
                            class="c17"
                          >
                            <div
                              class="c18"
                              dir="ltr"
                            >
                              <h3
                                class="c19"
                              >
                                <a
                                  class="c20"
                                  href="/pidgin/tori-51945757"
                                >
                                  Nigeria don get five new cases of Coronavirus - See how e happun
                                </a>
                              </h3>
                              <p
                                class="c21"
                              >
                                Nigeria Health say di patients from UK and America travel come di kontri.
                              </p>
                              <time
                                class="c22"
                                datetime="2020-02-03"
                              >
                                3rd February 2020
                              </time>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
                <div
                  class="c14"
                >
                  <section
                    aria-labelledby="features-analysis-heading"
                    class="c3"
                    role="region"
                  >
                    <div
                      class="c3"
                    >
                      <div
                        class="c4 c5"
                      >
                        <div
                          class="c6"
                        />
                        <h2
                          class="c7"
                        >
                          <div
                            class="c8"
                          >
                            <span
                              class="c9"
                            >
                              <span
                                class="c10"
                                dir="ltr"
                                id="features-analysis-heading"
                              >
                                Features & Analysis
                              </span>
                            </span>
                          </div>
                        </h2>
                      </div>
                      <ul
                        class="c15"
                        role="list"
                      >
                        <li
                          class="c16"
                          role="listitem"
                        >
                          <div
                            class="c17"
                          >
                            <div
                              class="c23"
                              dir="ltr"
                            >
                              <div
                                class="c24"
                              >
                                <div
                                  class="c25"
                                >
                                  <div
                                    class="lazyload-placeholder"
                                  />
                                </div>
                                <div
                                  class="c26"
                                />
                              </div>
                            </div>
                            <div
                              class="c27"
                              dir="ltr"
                            >
                              <h3
                                class="c28"
                              >
                                <a
                                  class="c20"
                                  href="/igbo/afirika-23252735"
                                >
                                  STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk?
                                </a>
                              </h3>
                              <p
                                class="c29"
                              >
                                This is a test asset used in Simorgh, please do not edit it without asking.
                              </p>
                              <time
                                class="c22"
                                datetime="2020-02-03"
                              >
                                3rd February 2020
                              </time>
                            </div>
                          </div>
                        </li>
                        <li
                          class="c16"
                          role="listitem"
                        >
                          <div
                            class="c17"
                          >
                            <div
                              class="c23"
                              dir="ltr"
                            >
                              <div
                                class="c24"
                              >
                                <div
                                  class="c25"
                                >
                                  <div
                                    class="lazyload-placeholder"
                                  />
                                </div>
                                <div
                                  class="c26"
                                />
                              </div>
                            </div>
                            <div
                              class="c27"
                              dir="ltr"
                            >
                              <h3
                                class="c28"
                              >
                                <a
                                  class="c20"
                                  href="/igbo/afirika-49666505"
                                >
                                  Robert Mugabe: Zimbabwe eferela nwa amadi a aka
                                </a>
                              </h3>
                              <p
                                class="c29"
                              >
                                Gọọmentị nakwa ndị Zimbabwe pụtara n'igwe iji kwanyere aka chịburu ha bụ Robert Mugabe ugwu ikpeazụ ya na Harare.
                              </p>
                              <time
                                class="c22"
                                datetime="2020-02-03"
                              >
                                3rd February 2020
                              </time>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
                <div
                  class="c30"
                >
                  <h2>
                    This is a component in the second column
                  </h2>
                </div>
                <div
                  class="c30"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Story Page snapshots should match snapshot for STY 1`] = `
.c25 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c22 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c4 {
  position: relative;
  z-index: 0;
  margin-top: 2rem;
}

.c7 {
  margin: 0;
  padding: 0;
}

.c16 {
  padding: 0.5rem 0 1rem;
}

.c16:first-child {
  padding-top: 0;
}

.c16:last-child {
  padding-bottom: 0;
  border: none;
}

.c15 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c23 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c18 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

.c18 >div {
  vertical-align: middle;
}

.c18 >div {
  display: inline-block;
  vertical-align: initial;
}

.c18 svg {
  margin: 0;
}

.c27 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c17 {
  position: relative;
}

.c24 {
  position: relative;
}

.c26 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.c19 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  display: inline;
}

.c28 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c21 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.c29 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c20 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c20:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c20:hover,
.c20:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:visited {
  color: #6E6E73;
}

.c3 {
  margin-bottom: 1rem;
}

.c5 {
  margin-top: 0;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c30 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c14 {
  margin-bottom: 1.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c22 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 0.5rem) + 7 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 0.5rem) + 7 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 0.5rem) + 7 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    width: calc(8/8*(100% - 8 * 1rem) + 7 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(8/12*(100% - 12 * 1rem) + 7 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(5/12*(100% - 12 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 16.666666666666668%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c12 {
    width: calc(33.333333333333336%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c12 {
    width: calc(25%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c12 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c6 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c4 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width:62.9375rem) {
  .c16 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c16 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c16:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c23 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c23 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c18 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c18 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c27 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c27 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c17 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:25rem) {
  .c26 {
    position: absolute;
    bottom: 0;
  }
}

@media (max-width:24.9375rem) {
  .c26 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c28 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c21 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c21 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c21 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c21 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c29 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c29 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c29 {
    display: none;
    visibility: hidden;
  }
}

@media (max-width:63rem) {
  .c3 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c11 {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c11 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c13 {
    margin-top: 2rem;
  }
}

@media (min-width:63rem) {
  .c14 {
    padding: 1rem;
  }
}

<html
  dir="ltr"
  lang="pcm"
>
  <head>
    <title>
      STY - Blood pressure drugs dey work better - BBC News Pidgin
    </title>
    <link
      href="https://www.test.bbc.com/pidgin/world-23252817"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.co.uk/pidgin/world-23252817.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/pidgin/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News Pidgin"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News Pidgin"
      name="application-name"
    />
    <meta
      content="This is a test asset used in Simorgh, please do not edit it without asking."
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="This is a test asset used in Simorgh, please do not edit it without asking."
      property="og:description"
    />
    <meta
      content="http://ichef.test.bbci.co.uk/news/1024/branded_pidgin/6ACE/test/_63724372_gettyimages-1098075358.jpg"
      property="og:image"
    />
    <meta
      content="Some people at the NTA awards"
      property="og:image:alt"
    />
    <meta
      content="pcm"
      property="og:locale"
    />
    <meta
      content="BBC News Pidgin"
      property="og:site_name"
    />
    <meta
      content="STY - Blood pressure drugs dey work better - BBC News Pidgin"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pidgin/world-23252817"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@BBCNews"
      name="twitter:creator"
    />
    <meta
      content="This is a test asset used in Simorgh, please do not edit it without asking."
      name="twitter:description"
    />
    <meta
      content="Some people at the NTA awards"
      name="twitter:image:alt"
    />
    <meta
      content="http://ichef.test.bbci.co.uk/news/1024/branded_pidgin/6ACE/test/_63724372_gettyimages-1098075358.jpg"
      name="twitter:image:src"
    />
    <meta
      content="@BBCNews"
      name="twitter:site"
    />
    <meta
      content="STY - Blood pressure drugs dey work better - BBC News Pidgin"
      name="twitter:title"
    />
    <meta
      content="https://www.facebook.com/bbcnews"
      name="article:author"
    />
    <meta
      content="2019-10-23T12:39:30.000Z"
      name="article:published_time"
    />
    <meta
      content="2019-10-23T12:39:32.000Z"
      name="article:modified_time"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"NewsArticle","url":"https://www.test.bbc.com/pidgin/world-23252817","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Pidgin","publishingPrinciples":"https://www.bbc.com/pidgin/institutional-48528766","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png","mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pidgin/world-23252817","name":"STY - Blood pressure drugs dey work better"},"headline":"STY - Blood pressure drugs dey work better","description":"This is a test asset used in Simorgh, please do not edit it without asking.","datePublished":"2019-10-23T12:39:30.000Z","dateModified":"2019-10-23T12:39:32.000Z","author":{"@type":"NewsMediaOrganization","name":"BBC News Pidgin","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"},"noBylinesPolicy":"https://www.bbc.com/pidgin/institutional-48528766#authorexpertise"}}
    </script>
  </head>
  <body>
    <div>
      <div
        id="ContextsContainer"
      >
        <div
          id="PageWrapperContainer"
        >
          <div
            id="LoadingContainer"
          >
            <div
              id="ErrorContainer"
            >
              <div
                id="DataContainer"
              >
                <noscript />
                <div
                  class="c0 c1"
                  dir="ltr"
                >
                  <div
                    class="c2"
                    dir="ltr"
                  >
                    <main
                      role="main"
                    />
                    <section
                      aria-labelledby="related-content-heading"
                      class="c3"
                      role="region"
                    >
                      <div
                        class="c3"
                      >
                        <div
                          class="c4 c5"
                        >
                          <div
                            class="c6"
                          />
                          <h2
                            class="c7"
                          >
                            <div
                              class="c8"
                            >
                              <span
                                class="c9"
                              >
                                <span
                                  class="c10"
                                  dir="ltr"
                                  id="related-content-heading"
                                >
                                  Another thing we de for inside dis tori
                                </span>
                              </span>
                            </div>
                          </h2>
                        </div>
                        <div
                          class="c11"
                        />
                      </div>
                    </section>
                  </div>
                  <div
                    class="c12 c13"
                    dir="ltr"
                  >
                    <div
                      class="c14"
                    >
                      <section
                        aria-labelledby="top-stories-heading"
                        class="c3"
                        role="region"
                      >
                        <div
                          class="c3"
                        >
                          <div
                            class="c4 c5"
                          >
                            <div
                              class="c6"
                            />
                            <h2
                              class="c7"
                            >
                              <div
                                class="c8"
                              >
                                <span
                                  class="c9"
                                >
                                  <span
                                    class="c10"
                                    dir="ltr"
                                    id="top-stories-heading"
                                  >
                                    Top Stories
                                  </span>
                                </span>
                              </div>
                            </h2>
                          </div>
                          <ul
                            class="c15"
                            role="list"
                          >
                            <li
                              class="c16"
                              role="listitem"
                            >
                              <div
                                class="c17"
                              >
                                <div
                                  class="c18"
                                  dir="ltr"
                                >
                                  <h3
                                    class="c19"
                                  >
                                    <a
                                      class="c20"
                                      href="/mundo/noticias-internacional-51939501"
                                    >
                                      China dice tener una vacuna contra el nuevo coronavirus lista para pruebas en humanos
                                    </a>
                                  </h3>
                                  <p
                                    class="c21"
                                  >
                                    Un día después de que en Estados Unidos anunciaran que pasan a probar en humanos una posible vacuna para el nuevo coronavirus, diversas instituciones chinas revelaron este martes sus planes para iniciar a partir de abril ensayos clínicos de varias posibles vacunas contra el covid-19.
                                  </p>
                                  <time
                                    class="c22"
                                    datetime="2020-02-03"
                                  >
                                    3rd February 2020
                                  </time>
                                </div>
                              </div>
                            </li>
                            <li
                              class="c16"
                              role="listitem"
                            >
                              <div
                                class="c17"
                              >
                                <div
                                  class="c18"
                                  dir="ltr"
                                >
                                  <h3
                                    class="c19"
                                  >
                                    <a
                                      class="c20"
                                      href="/pidgin/tori-51945757"
                                    >
                                      Nigeria don get five new cases of Coronavirus - See how e happun
                                    </a>
                                  </h3>
                                  <p
                                    class="c21"
                                  >
                                    Nigeria Health say di patients from UK and America travel come di kontri.
                                  </p>
                                  <time
                                    class="c22"
                                    datetime="2020-02-03"
                                  >
                                    3rd February 2020
                                  </time>
                                </div>
                              </div>
                            </li>
                          </ul>
                        </div>
                      </section>
                    </div>
                    <div
                      class="c14"
                    >
                      <section
                        aria-labelledby="features-analysis-heading"
                        class="c3"
                        role="region"
                      >
                        <div
                          class="c3"
                        >
                          <div
                            class="c4 c5"
                          >
                            <div
                              class="c6"
                            />
                            <h2
                              class="c7"
                            >
                              <div
                                class="c8"
                              >
                                <span
                                  class="c9"
                                >
                                  <span
                                    class="c10"
                                    dir="ltr"
                                    id="features-analysis-heading"
                                  >
                                    Features & Analysis
                                  </span>
                                </span>
                              </div>
                            </h2>
                          </div>
                          <ul
                            class="c15"
                            role="list"
                          >
                            <li
                              class="c16"
                              role="listitem"
                            >
                              <div
                                class="c17"
                              >
                                <div
                                  class="c23"
                                  dir="ltr"
                                >
                                  <div
                                    class="c24"
                                  >
                                    <div
                                      class="c25"
                                    >
                                      <div
                                        class="lazyload-placeholder"
                                      />
                                    </div>
                                    <div
                                      class="c26"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="c27"
                                  dir="ltr"
                                >
                                  <h3
                                    class="c28"
                                  >
                                    <a
                                      class="c20"
                                      href="/igbo/afirika-23252735"
                                    >
                                      STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk?
                                    </a>
                                  </h3>
                                  <p
                                    class="c29"
                                  >
                                    This is a test asset used in Simorgh, please do not edit it without asking.
                                  </p>
                                  <time
                                    class="c22"
                                    datetime="2020-02-03"
                                  >
                                    3rd February 2020
                                  </time>
                                </div>
                              </div>
                            </li>
                            <li
                              class="c16"
                              role="listitem"
                            >
                              <div
                                class="c17"
                              >
                                <div
                                  class="c23"
                                  dir="ltr"
                                >
                                  <div
                                    class="c24"
                                  >
                                    <div
                                      class="c25"
                                    >
                                      <div
                                        class="lazyload-placeholder"
                                      />
                                    </div>
                                    <div
                                      class="c26"
                                    />
                                  </div>
                                </div>
                                <div
                                  class="c27"
                                  dir="ltr"
                                >
                                  <h3
                                    class="c28"
                                  >
                                    <a
                                      class="c20"
                                      href="/igbo/afirika-49666505"
                                    >
                                      Robert Mugabe: Zimbabwe eferela nwa amadi a aka
                                    </a>
                                  </h3>
                                  <p
                                    class="c29"
                                  >
                                    Gọọmentị nakwa ndị Zimbabwe pụtara n'igwe iji kwanyere aka chịburu ha bụ Robert Mugabe ugwu ikpeazụ ya na Harare.
                                  </p>
                                  <time
                                    class="c22"
                                    datetime="2020-02-03"
                                  >
                                    3rd February 2020
                                  </time>
                                </div>
                              </div>
                            </li>
                          </ul>
                        </div>
                      </section>
                    </div>
                    <div
                      class="c30"
                    >
                      <h2>
                        This is a component in the second column
                      </h2>
                    </div>
                    <div
                      class="c30"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;
